news updates and RMA forms

--- a/careers.html
+++ b/careers.html
@@ -21,7 +21,7 @@ permalink: /jobs
       </div>
       <div class="col-sm-6 padding-tb-30">
         <div class="col-sm-6 col-sm-offset-1">
-          <a href="http://www.outsideonline.com/1962466/best-places-work-2014" target="_blank"><img src="assets/img/logo_BestPlacestoWork_2014.jpg" class="img-responsive" alt="Outside Magazine's Best Places to work"></a>
+          <a href="https://www.outsideonline.com/2134736/best-places-work-2016" target="_blank"><img src="assets/img/logo_BestPlacestoWork_2016.png" class="img-responsive" alt="Outside Magazine's Best Places to work"></a>
         </div>
         <div class="col-sm-4 col-sm-offset-1">
           <a href="http://www.iamfromdurango.com/" target=_blank><img src="assets/img/logo_durango_lpc.jpg" class="img-responsive" alt="La Plata County Economic Development Alliance"></a>
