--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -51,9 +51,88 @@ permalink: /service
           <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a></p>
       </div>
     </div>
+    
     <p>Please contact us for an RMA number for your repair. Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
+    <!-- Repair RMA -->
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+              Request an RMA for <strong>Repair/Service</strong>
+            </a>
+          </h4>
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+          <div class="panel-body">
+            <!--[if lte IE 8]>
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+            <![endif]-->
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+              hbspt.forms.create({ 
+                portalId: '1875880',
+                formId: '34632cce-20a3-4920-b67a-d3d392ed0f5f'
+              });
+            </script>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Warranry RMA -->
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingTwo">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Request an RMA for <strong>Warranty Evaluation</strong>
+            </a>
+          </h4>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+          <div class="panel-body">
+            <!--[if lte IE 8]>
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+            <![endif]-->
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+              hbspt.forms.create({ 
+                portalId: '1875880',
+                formId: '1afa52f9-f923-4949-9d02-b45d2fa00290'
+              });
+            </script>
 
-    <p><strong>Warthog Authorized Repair Centers</strong><br><a href="/contact">See our listing of Warthog sewer tools dealers to find an Authorized Repair Center in your area.</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Warranry RMA -->
+    <div class="panel-group margin-bottom-30" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingThree">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Request an RMA for <strong>Return to Stock</strong>
+            </a>
+          </h4>
+        </div>
+        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+          <div class="panel-body">
+            <!--[if lte IE 8]>
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+            <![endif]-->
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+              hbspt.forms.create({ 
+                portalId: '1875880',
+                formId: '8da53b05-8378-44e1-9a60-3eb4ceef9287'
+              });
+            </script>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
     <h2 class="section-heading">Lead Time</h2>
     <p>Call or email your order to StoneAge or an authorized dealer with purchase order number, shipping and billing addresses, and delivery date. Check datasheet to ensure specifications are complete. Advise whether we should hold shipment until all items are available.</p>
@@ -102,7 +181,7 @@ permalink: /service
       <h3>Sewer Tools</h3>
       <table class="table table-responsive">
         <tr>
-          <td colspan="2">See our listing of <a href="contact.html">Warthog sewer tools dealers</a> to find an Authorized Repair Center in your area.</td>
+          <td colspan="2"><a href="contact.html">See our listing of Warthog sewer tools dealers to find an Authorized Repair Center in your area.</a></td>
         </tr>
       </table>
     </div>
