--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -52,7 +52,7 @@ permalink: /service
       </div>
     </div>
     
-    <p>Please contact us for an RMA number for your repair. Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
+    <p>Please contact us for an RMA number for return of any StoneAge parts. You can call any of our locations or use one of the forms below. Please fill out as much of the form as possible.</p>
     <!-- Repair RMA -->
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
