--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -81,6 +81,7 @@ permalink: /waterblast-tools-automated-equipment
             <a href="/tr-130" class="list-group-item">Torus TR-130</a>
             <a href="/tr-200" class="list-group-item">Torus TR-200</a>
             <a href="/torus-booms" class="list-group-item">Torus Positioning Booms</a>
+            <a href="/scs" class="list-group-item">SCS High Flow Tank Cleaner<span class="label label-warning">New for 2017</span></a>
             <a href="/sm-air" class="list-group-item">SM-AIR Large Tank Cleaner</a>
           </div>
         </div>
