clean working mixit, reday for bpt and ve-400

--- a/rentals.html
+++ b/rentals.html
@@ -173,7 +173,7 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <p>Equipment can be rented by day, week or month.</p>
-              <p>Please contact your closest StoneAge branch to get a quote for the specific equipment and time frame that you require. Our staff will also be happy to review how your rental charges can be applied toward equipment purchase, if desired.</p>
+              <p>Please contact your local StoneAge rental facility to get a quote for the specific equipment and time frame that you require. Our staff will also be happy to review how your rental charges can be applied toward equipment purchase, if desired.</p>
             </div>
           </div>
         </div>
@@ -229,7 +229,7 @@ master-slider: yes
           </div>
           <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
             <div class="panel-body">
-              <p>Delivery is available upon request within a 50-mile radius of the local rental facility.<br><br>Shipping is available on all rentals within the United States.</p>
+              <p>Delivery is available upon request within a 50-mile radius of the local rental facility.<br>Shipping is available on all rentals within the United States.</p>
             </div>
           </div>
         </div>
@@ -350,7 +350,7 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <p>StoneAge engineers and manufactures all the equipment that we rent – but reliable equipment is only part of the rental equation. We readily share decades of waterblasting experience and back up our rentals with expert technical support to make sure our customers are successful when they use our equipment.</p>
-              <p>Renting from StoneAge is a great option when you want to:</p>
+              <p style="padding:0;">Renting from StoneAge is a great option when you want to:</p>
               <ul>
               <li>Expand your fleet temporarily during times of peak use</li>
               <li>Quickly get back-up equipment in the middle of a job</li>
@@ -377,6 +377,5 @@ master-slider: yes
     </aside>
   </div>
 </section>
-
 
 {% include footer-cta.html %}
