backout preventers done!

--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -91,17 +91,16 @@ master-slider: yes
   <div class="tabs tabs-style-bar">
     <nav>
       <ul>
-        <li><a href="#section-bar-1"><span>Pipe Cleaning Specifications</span></a></li>
-        <li><a href="#section-bar-2"><span>Tube Cleaning Specifications</span></a></li>
-        <li><a href="#section-bar-3"><span>Videos</span></a></li>
-        <li><a href="#section-bar-4"><span>Manuals/Docs</span></a></li>
+        <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+        <li><a href="#section-bar-2"><span>Videos</span></a></li>
+<!--        <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>-->
       </ul>
     </nav>
     <div class="content-wrap">
 
-    <!-- Pipe Cleaning Specifications -->
+    <!-- Specifications -->
     <section id="section-bar-1">
-      <div class="col-sm-5">
+      <div class="col-sm-8">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#305" aria-controls="305" role="tab" data-toggle="tab">BJ 305</a></li>
@@ -109,6 +108,9 @@ master-slider: yes
           <li role="presentation"><a href="#320" aria-controls="320" role="tab" data-toggle="tab">BJ 320</a></li>
           <li role="presentation"><a href="#325" aria-controls="325" role="tab" data-toggle="tab">BJ 325</a></li>
           <li role="presentation"><a href="#340" aria-controls="340" role="tab" data-toggle="tab">BJ 340</a></li>
+          <li role="presentation"><a href="#bop-qtr" aria-controls="bop-qtr" role="tab" data-toggle="tab">BOP 010-2-4 QTR</a></li>
+          <li role="presentation"><a href="#bop-360" aria-controls="bop-360" role="tab" data-toggle="tab">BOP 360</a></li>
+          <li role="presentation"><a href="#bop-full" aria-controls="bop-full" role="tab" data-toggle="tab">BOP 010-4-8</a></li>
         </ul>
         <!-- Tab panes -->
         <div class="tab-content">
@@ -136,7 +138,6 @@ master-slider: yes
               </tr>
             </tbody>
             </table>
-            <p class="small">NOTE: Securing device not supplied</p>
           </div>
           <!-- BJ 310 -->
           <div role="tabpanel" class="tab-pane" id="310">
@@ -236,54 +237,69 @@ master-slider: yes
             </tbody>
             </table>
           </div>
-        </div>
-      </div>
-      <aside class="col-sm-3 col-sm-offset-4 aside-box">
-        <h3>Need Support?</h3>
-        <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
-        <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
-      </aside>
-    </section>
-
-    <!-- Tube Cleaning Specifications -->
-    <section id="section-bar-2">
-      <div class="col-sm-5">
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#bpt-100" aria-controls="bpt-100" role="tab" data-toggle="tab">BPT-100</a></li>
-          <li role="presentation"><a href="#ve-400" aria-controls="ve-400" role="tab" data-toggle="tab">VE-400</a></li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <!-- BPT-100 Banshee ProTex Safety Stop -->
-          <div role="tabpanel" class="tab-pane active" id="bpt-100">
-            <p class="product-description">The <strong>BPT-100 Banshee ProTex Safety Stop</strong> is a lightweight, durable splashguard built to keep operators safe from the potential hazards of manual flex-lancing. The ProTex is designed specifically for use with Banshee tube cleaning tools and the anti-withdrawal collet easily adjusts to fit many hose sizes. A removable insert easily centers smaller tools and we offer an optional three foot long tube for use with a Stinger.</p>
+          <!-- BOP-QTR -->
+          <div role="tabpanel" class="tab-pane" id="bop-qtr">
             <table class="table specs table-hover">
             <tbody>
               <tr>
                 <th>Tool Model</th>
-                <td colspan="2">BPT-100</td>
+                <td colspan="2">BOP 010-2-4 QTR</td>
               </tr>
               <tr>
-                <th>Hose Size</th>
-                <td>1/8-1/2 in.</td>
-                <td><span class="metric">3-13 mm</span></td>
+                <th>Pipe Size</th>
+                <td>2-4 in.</td>
+                <td><span class="metric">51-102 mm</span>
               </tr>
               <tr>
-                <th>Upper Tube</th>
-                <td>12 or 36 in.</td>
-                <td><span class="metric">305 or 914 mm</span></td>
+                <th>Description</th>
+                <td colspan="2">Quarter flange mount</td>
               </tr>
             </tbody>
             </table>
           </div>
-          <!-- VE-400 Tube Cleaning Safety Stop -->     
-          <div role="tabpanel" class="tab-pane" id="ve-400">
-            <p class="product-description">The <strong>VE-400 Tube Cleaning Safety Stop</strong> is designed to protect the operator from a flex lance exiting the tube sheet during cleaning operations. The VE-400 adapts to both horizontal and vertical applications, and the wide range of adjustment easily accommodates different sizes of tube sheets.</p>
+          <!-- BOP 360 -->
+          <div role="tabpanel" class="tab-pane" id="bop-360">
+            <table class="table specs table-hover">
+            <tbody>
+              <tr>
+                <th>Tool Model</th>
+                <td colspan="2">BOP 360</td>
+              </tr>
+              <tr>
+                <th>Pipe Size</th>
+                <td>5–14 in.</td>
+                <td><span class="metric">127–356 mm</span>
+              </tr>
+              <tr>
+                <th>Description</th>
+                <td colspan="2">Straight flange mount</td>
+              </tr>
+            </tbody>
+            </table>
+          </div>
+          <!-- BOP Full -->
+          <div role="tabpanel" class="tab-pane" id="bop-full">
+            <table class="table specs table-hover">
+            <tbody>
+              <tr>
+                <th>Tool Model</th>
+                <td colspan="2">BOP 010-4-8</td>
+              </tr>
+              <tr>
+                <th>Pipe Size</th>
+                <td>4–8 in.</td>
+                <td><span class="metric">102-203 mm</span>
+              </tr>
+              <tr>
+                <th>Description</th>
+                <td colspan="2">Full flange mount</td>
+              </tr>
+            </tbody>
+            </table>
           </div>
         </div>
       </div>
-      <aside class="col-sm-3 col-sm-offset-4 aside-box">
+      <aside class="col-sm-3 col-sm-offset-1 aside-box">
         <h3>Need Support?</h3>
         <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
         <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
@@ -291,7 +307,7 @@ master-slider: yes
     </section>
       
     <!-- Videos -->
-    <section id="section-bar-3">
+    <section id="section-bar-2">
       <div class="row row-centered">
         <div class="col-sm-4 col-centered">
           <!-- Lightbox call -->
@@ -306,8 +322,8 @@ master-slider: yes
       </div>
     </section>
       
-    <!-- Manuals/Docs -->
-      <section id="section-bar-2">
+    <!-- Manuals/Docs
+      <section id="section-bar-3">
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals/Documentation</h3>
@@ -324,7 +340,7 @@ master-slider: yes
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
-      </section>
+      </section> -->
 
     </div><!-- /content -->
   </div><!-- /tabs -->
@@ -338,6 +354,14 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div>
+        <a href="/BPT-100"><img class="img-responsive" src="/assets/img/product/thumb-bpt-02.jpg" alt="Backout prevention for tube cleaning">
+        <h5>BPT-100</h5></a>
+      </div>
+      <div>
+        <a href="/ve-400"><img class="img-responsive" src="/assets/img/product/thumb-chicken-wing-02.jpg" alt="Backout prevention for tube cleaning">
+        <h5>VE-400</h5></a>
+      </div>
       <div class="item">
         <a href="/bjv"><img class="img-responsive" src="/assets/img/product/thumb-bjv-03.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
         <h5>BJV Pipe Cleaning Tools</h5></a>
