--- a/rotary-waterblast-tools/bpt-100-safety-stop.html
+++ b/rotary-waterblast-tools/bpt-100-safety-stop.html
@@ -41,13 +41,13 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=BPT-100 Banshee ProTex&body=Check out the BPT-100 Banshee ProTex Safety Stop: http://www.stoneagetools.com/ve-400">E-mail link</a></li>
+            <li><a href="mailto:?subject=BPT-100 Banshee ProTex&body=Check out the BPT-100 Banshee ProTex Safety Stop: http://www.stoneagetools.com/bpt-100">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The <strong>BPT-100 Banshee ProTex Safety Stop</strong> is a lightweight, durable splashguard built to keep operators safe from the potential hazards of manual flex-lancing. The ProTex is designed specifically for use with Banshee tube cleaning tools and the anti-withdrawal collet easily adjusts to fit many hose sizes. A removable insert easily centers smaller tools and we offer an optional three foot long tube for use with a Stinger.</p>
+      <p class="product-description">The <strong>BPT-100 Banshee ProTex Safety Stop</strong> is a lightweight, durable splashguard built to keep operators safe from the potential hazards of manual flex-lancing. The ProTex is designed specifically for use with Banshee tube cleaning tools and the anti-withdrawal collet easily adjusts to fit many hose sizes. A removable insert easily centers smaller tools and we offer an optional three foot long tube for use with a stinger.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -110,7 +110,7 @@ master-slider: yes
       <div class="col-sm-4">
         <ul class="list-unstyled basic">
           <h3>Manuals/Documentation</h3>
-          <li><a href="/assets/pdf/manuals/ve_400_manual_with_stop.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;VE-400 User Manual</a><br><p class="small">Courtesy of Advanced Pressure Systems</p></li>
+          <li><a href="/assets/pdf/manuals/BPT-100_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BPT-100 Manual</a></li>
         </ul>
       </div>
       <div class="col-sm-4">
@@ -148,16 +148,16 @@ master-slider: yes
         <h5>VE-400</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
+        <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe and exchanger tube cleaning">
+        <h5>AutoBox ABX-PRO</h5></a>
       </div>
       <div class="item">
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
         <h5>AutoBox ABX-2L</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe and exchanger tube cleaning">
-        <h5>AutoBox ABX-PRO</h5></a>
+        <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
+        <h5>AutoBox ABX-3L</h5></a>
       </div>
     </div>
   </div>
@@ -170,7 +170,7 @@ master-slider: yes
     <div class="col-md-7">
 
       <h2>Backout prevention for high pressure tube cleaning</h2>
-      <p>Backout preventers increase safety operator by keeping pressurized tools from backing out of the tube.</p>
+      <p>Backout preventers increase operator safety by keeping pressurized tools from backing out of the tube.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
