--- a/rotary-waterblast-tools/ve-400-safety-stop.html
+++ b/rotary-waterblast-tools/ve-400-safety-stop.html
@@ -79,7 +79,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals/Documentation</h3>
-            <li><a href="/assets/pdf/manuals/ve_400_manual_with_stop.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;VE-400 User Manual</a><br><p class="small">Courtesy of Advanced Pressure Systems</p></li>
+            <li><a href="/assets/pdf/manuals/VE_400_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;VE-400 User Manual</a><br><p class="small">Courtesy of Advanced Pressure Systems</p></li>
           </ul>
         </div>
         <div class="col-sm-4">
@@ -104,6 +104,10 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div>
+        <a href="/BPT-100"><img class="img-responsive" src="/assets/img/product/thumb-bpt-02.jpg" alt="Backout prevention for tube cleaning">
+        <h5>BPT-100</h5></a>
+      </div>
       <div class="item">
         <a href="/backout-prevention"><img class="img-responsive" src="/assets/img/product/thumb-backout.jpg" alt="Backout prevention for pirpr cleaning">
         <h5>Backout Preventers</h5></a>
