tipue working, no styling

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -33,6 +33,10 @@ landing: yes
       <button class="filter" data-filter=".hydro-demo">Concrete</button>
       <button class="filter" data-filter=".accessories">Swivels</button>
       <button class="filter" data-filter=".accessories">Accessories</button>
+      
+      <form action="search">
+        <input type="text" name="q" id="tipue_search_input" autocomplete="off" required>
+      </form>
 
 <!--
       <label>Sort:</label>
