search working - no content yet

--- a/search-results.html
+++ b/search-results.html
@@ -5,8 +5,15 @@ permalink: /search
 search-pg: yes
 ---
 
-
-<form action="search">
-  <input type="text" name="q" id="tipue_search_input" autocomplete="off" required>
-</form>
-<div id="tipue_search_content"></div>
+<main class="container padding-tb-30">
+  <div class="row">
+    <div class="col-md-12 margin-bottom-30">
+      
+      <form action="search">
+        <input type="text" name="q" id="tipue_search_input" autocomplete="off" required>
+      </form>
+      <div id="tipue_search_content"></div>
+      
+    </div>
+  </div>
+</main>
