getting through rotary tools

--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -414,6 +414,10 @@ consistent cleaning</li>
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
         <h5>AutoBox ABX-3L</h5></a>
       </div>
+      <div class="item">
+        <a href="/abx-500"><img src="/assets/img/product/thumb-abx-500-03.jpg" alt="AutoBox ABX-500">
+        <h5>AutoBox ABX-500</h5></a>
+      </div>
     </div>
   </div>
 </section>
