--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -349,7 +349,7 @@ landing: yes
           </a>
         </div>
         
-        <div class="mix pipe-cleaning rotary" data-name="bjv-c">
+        <div class="mix pipe-cleaning accessories" data-name="bjv-c">
           <a href="/bjv-centralizers" class="search-text">
             <img src="/assets/img/product/bjv-02.jpg" class="img-responsive" />
             <h3>BJV Centralizers</h3>
