--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -11,49 +11,48 @@ master-slider: yes
   <div class="container">
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
-      <li><a href="/waterblast-tools-automated-equipment#rotary">Waterblast Tools &amp; Equipment</a></li>
+      <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
       <li class="active">Beetle</li>
     </ul> 
   </div>
 </div>
 <!-- End Breadcrumbs -->
 
- <!-- Product Main -->
+<!-- Product Intro -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
+    <div class="col-md-5 margin-bottom-30">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/bt-06.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-06.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/bt-06.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bt-06.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-08.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-08.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bt-08.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bt-08.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-03.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bt-03.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bt-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-04.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bt-04.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bt-04.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-05.jpg" alt="ZBeetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bt-05.jpg" alt="ZBeetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bt-05.jpg" alt="thumb">
           </div>
         </div>
       </div>
       <!-- End Master Slider -->
     </div>
 
-    <!-- Product Info -->
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
         <h1>Beetle</h1>
         <div class="dropdown product-social">
@@ -64,42 +63,40 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-
+      
       <p class="product-description">The Beetle line of rotary tools leverage off patented technology that has made Banshee nozzles the most successful tube cleaning tools in the industry. Beetle nozzles are engineered to provide the same powerful cleaning features, but in a compact size that is ideal for navigating tubes and small pipes with curves and elbows.</p>
       <p>The small diameter and short length of the Beetle models make them ideal for cleaning process piping, drain lines, u-tube bundles and other small ID conduit with bends that may have been inaccessible in the past.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Clean radiused conduit with internal diameters as small as 5/8 in. (16 mm).<br><em><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank">See Tool Talk for minimum radius recommendations.</a></em></li>
+        <li>Patented liquid bearing design means no bearings, seals or lubricants to replace</li>
+        <li>Stainless steel construction for extreme durability and longevity</li>
+        <li>Efficiently remove removing scale, carbons and polymers</li>
+      </ul>
 
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              <ul>
-                <li>Clean radiused conduit with internal diameters as small as 5/8 in. (16 mm). <em><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank">See Tool Talk for minimum radius recommendations.</a></em></li>
-                <li>Patented liquid bearing design means no bearings, seals or lubricants to replace</li>
-                <li>Stainless steel construction for extreme durability and longevity</li>
-                <li>Efficiently remove removing scale, carbons and polymers</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
-        <!-- Beetle Models -->
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingBtl">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseBtl" aria-expanded="false" aria-controls="collapseBtl">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseBtl" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingBtl">
-            <div class="panel-body">
+  </div>
+
+  </div>
+</main>
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+  <section>
+    <div class="tabs tabs-style-bar">
+        <nav>
+            <ul>
+              <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+              <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+            </ul>
+        </nav>
+        <div class="content-wrap">
+
+          <!-- Specifications -->
+          <section id="section-bar-1">
+            <div class="col-sm-5">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#bt12" aria-controls="bt12" role="tab" data-toggle="tab">BT12</a></li>
@@ -286,64 +283,67 @@ master-slider: yes
                 </div>
               </div>
             </div>
-          </div>     
-        </div>     
+            <aside class="col-sm-3 col-sm-offset-4 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
 
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-                <li><a href="/assets/pdf/bt_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Data Sheet</a></li>
-                <li><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Tool Talk</a></li>
-                <li><a href="/assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Manual</a></li>
+          <!-- Manuals/Docs -->
+          <section id="section-bar-3">
+            <div class="col-sm-4">
+              <ul class="list-unstyled basic">
+                <h3>Manuals</h3>
+                <li><a href="/assets/pdf/manuals/bt_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Manual</a></li>
               </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
             </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
+            <div class="col-sm-4">
+              <ul class="list-unstyled basic">
+                <h3>Documentation</h3>
+                <li><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Data Sheet</a></li>
+                <li><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Tool Talk</a></li>
+              </ul>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
-    </div>
-  </div>
-  <!-- End Product Info -->
-
-</main>
-<!-- End Product Main -->
+        </div><!-- /content -->
+    </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
-<section class="related container padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
   <div class="section-heading">
       <h2>Related Items</h2>
   </div>
-  <div class="row row-centered">
-    <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="../assets/img/product/thumb-banshee-07.jpg" alt="Banshee Tube Cleaning Tools">
-      <h5>Banshee</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/2inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-04.jpg" alt="Badger Pipe Cleaning Tools">
-      <h5>2" Badger</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/prodrive"><img class="img-responsive" src="../assets/img/product/thumb-prodrive-03.jpg" alt="AutoBox ProDrive pipe cleaning">
-      <h5>ProDrive</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/navigator"><img class="img-responsive" src="../assets/img/product/thumb-nav-07.jpg" alt="Navigator small process pipe cleaning">
-      <h5>Navigator</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="../assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
-      <h5>Boiler Tube Cleaner</h5></a>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-01.jpg" alt="Banshee Tube Cleaning Tools">
+        <h5>Banshee</h5></a>
+      </div>
+      <div class="item">
+        <a href="/2inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-2in-04.jpg" alt="Badger Pipe Cleaning Tools">
+        <h5>2" Badger</h5></a>
+      </div>
+      <div class="item">
+        <a href="/navigator"><img class="img-responsive" src="/assets/img/product/thumb-navigator-01.jpg" alt="Navigator small process pipe cleaning">
+        <h5>Navigator</h5></a>
+      </div>
+      <div class="item">
+        <a href="/abx-pro"><img src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO">
+        <h5>AutoBox ABX-PRO</h5></a>
+      </div>
+      <div class="item">
+        <a href="/boiler-tube-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
+        <h5>Boiler Tube Cleaner</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -354,15 +354,13 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-        <h2>Rotary Cleaning for Small Pipes with Bends
-</h2>
+      <h2>Rotary Cleaning for Small Pipes with Bends</h2>
         <p>Beetle models are the solution for cleaning process piping, drain lines, u-tube bundles and other small ID tubes with bends and elbows that may have been inaccessible in the past.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Manual</a></td>
-          <td><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
+          <td><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -384,21 +382,21 @@ master-slider: yes
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
           <p class="signed">-Waterblast Contractor,<br/>Louisiana</p>
         </div>
-        <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
+        <img src="/assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
       </div>
 
 <!--
       <div class="item">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
-        <img src="../assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
+        <img src="/assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
       </div>
 -->
 
@@ -415,6 +413,6 @@ master-slider: yes
     </a> -->
   </div>
 </div>
-<!--=== End Product Testimonials ===-->
+<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
