--- a/rotary-waterblast-tools/bpt-100-safety-stop.html
+++ b/rotary-waterblast-tools/bpt-100-safety-stop.html
@@ -27,7 +27,13 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider" id="masterslider">
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/bpt-02.jpg" alt="Safety backout preventers for tube cleaning">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/bpt-02.jpg" alt="Banshee Protex tube cleaning backout prevention">
+            <img class="ms-thumb" src="/assets/img/product/thumb-bpt-02.jpg" alt="thumb">
+<!--              <a data-type="video" href="https://www.youtube.com/embed/KBNWNhc5Cqw"> </a>-->
+          </div>
+          <div class="ms-slide">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/banshee-06.jpg" alt="Banshee Protex tube cleaning backout prevention">
+            <img class="ms-thumb" src="/assets/img/product/thumb-banshee-06.jpg" alt="thumb">
           </div>
         </div>
       </div>
